--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 /src/firmware/esp_idf_glasses/build/
 /src/firmware/esp_idf_glasses/.devcontainer
-/src/firmware/esp_idf_glasses/sdkconfig
-/src/firmware/esp_idf_glasses/sdkconfig.old
+**.vscode**
