--- a/src/firmware/esp_idf_glasses/main/CMakeLists.txt
+++ b/src/firmware/esp_idf_glasses/main/CMakeLists.txt
@@ -28,7 +28,11 @@ set(DISPLAY_DIR Display)
 set(FONTS_DIR 
     ${DISPLAY_DIR}/fonts)
 set(OBJECTS_DIR ${DISPLAY_DIR}/Objects)
+
+set(SENSORS_DIR Sensors)
+set(GNSS_DIR ${SENSORS_DIR}/GNSS)
 set(IMM_O_D ${OBJECTS_DIR}/Immutable)
+set(IMU_DIR ${SENSORS_DIR}/IMU)
 set(IMM_O_D_SRCS 
     ${IMM_O_D}/RawText.cpp)
 set(M_O_D ${OBJECTS_DIR}/Mutable)
@@ -43,6 +47,12 @@ set(DISPLAY_DIRS
     ${FONTS_DIR}
     ${OBJECTS_DIRS}
     )
+set(IMU_DIRS
+    ${IMU_DIR}
+    )
+set(GNSS_DIRS
+    ${GNSS_DIR}
+    )
 set(FONTS_SRC
     ${FONTS_DIR}/font.cpp)
 set(OBJECTS_SRC
@@ -54,10 +64,13 @@ set(DISPLAY_SRCS
     ${FONTS_SRC}
     ${OBJECTS_SRC}
     )
+set(IMU_SRCS
+    ${IMU_DIR}/IMUManager.cpp
+    )
+set(GNSS_SRCS
+    ${GNSS_DIR}/GNSSManager.cpp
+    )
 
-set(SENSORS_DIR Sensors)
-set(GNSS_DIR ${SENSORS_DIR}/GNSS)
-set(GNSS_SRCS ${GNSS_DIR}/GNSS.cpp)
 set(TIMER_DIR ${SENSORS_DIR}/Timer)
 set(TIMER_SRCS ${TIMER_DIR}/Timers.cpp)
 set(SENSORS_DIRS
@@ -67,6 +80,7 @@ set(SENSORS_DIRS
 )
 set(SENSOR_SRCS 
     ${GNSS_SRCS}
+    ${IMU_SRCS}
     ${TIMER_SRCS}
 )
 
@@ -88,6 +102,8 @@ set(INCLUDES
     ${UOS_DIR}
     ${APP_DIR}
     ${DISPLAY_DIRS}
+    ${IMU_DIRS}
+    ${GNSS_DIRS}
     ${GLOBALS_DIR}
     ${SENSORS_DIRS}    
 )
@@ -96,7 +112,7 @@ set(ALL_SRCS
     ${BLE_SRCS}
     ${UOS_SRCS}
     ${APP_SRCS}
-    ${SENSOR_SRCS}  
+    ${SENSOR_SRCS}
     ${DISPLAY_SRCS}  
     ${GLOBALS_SRCS}
     ${OTHER_SRCS}
