Added IMU related code for doing basic fall detection
For now only writes to the serial console though and with quirks

--- a/src/firmware/esp_idf_glasses/main/CMakeLists.txt
+++ b/src/firmware/esp_idf_glasses/main/CMakeLists.txt
@@ -65,8 +65,8 @@ set(DISPLAY_SRCS
     ${OBJECTS_SRC}
     )
 set(IMU_SRCS
-    ${IMU_DIR}/IMUManager.cpp
-    )
+#    ${IMU_DIR}/IMUManager.cpp
+    ${IMU_DIR}/IMUstatemachine.cpp
     )
 #set(GNSS_SRCS
 #    ${GNSS_DIR}/GNSSManager.cpp
