--- a/src/Android_App/app/src/main/AndroidManifest.xml
+++ b/src/Android_App/app/src/main/AndroidManifest.xml
@@ -17,14 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartGlassApp">
-        <activity
-            android:name=".BluetoothActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.LAUNCHER" />
-            </intent-filter>
-        </activity>
+
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -38,8 +31,30 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCgJEFIHYvDnVD_HIIH1JwXhbtviq3uAGU" />
+            android:value="YOUR_API_KEY" />
 
+        <activity
+            android:name=".MapsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_maps" />
+
+        <receiver
+            android:name=".MyReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.androidbook.intents.testbc" />
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name=".BluetoothActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
