refactored Displayables to be memory efificient

--- a/src/firmware/esp_idf_glasses/main/CMakeLists.txt
+++ b/src/firmware/esp_idf_glasses/main/CMakeLists.txt
@@ -54,6 +54,7 @@ set(OBJECTS_SRC
 set(DISPLAY_SRCS 
     ${DISPLAY_DIR}/DisplayManager.cpp
     ${DISPLAY_DIR}/Content.cpp
+    ${DISPLAY_DIR}/Container.cpp
     ${FONTS_SRC}
     ${OBJECTS_SRC}
     )
