Fixed IMU_state_machine in main glasses project
Thresholds are now like the Arduino IDE version.
Problem with power management API

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /src/firmware/esp_idf_glasses/.devcontainer
 /src/firmware/esp_idf_glasses/sdkconfig.old
 **.vscode**
+/src/firmware/imu_test_esp_idf/build/
