--- a/src/firmware/esp_idf_glasses/main/CMakeLists.txt
+++ b/src/firmware/esp_idf_glasses/main/CMakeLists.txt
@@ -29,17 +29,18 @@ set(FONTS_DIR
     ${DISPLAY_DIR}/fonts)
 set(OBJECTS_DIR ${DISPLAY_DIR}/Objects)
 set(IMM_O_D ${OBJECTS_DIR}/Immutable)
+set(LOGO_O_D ${IMM_O_D}/Logos)
+set(LOGO_O_D_SRCS ${LOGO_O_D}/Logos.cpp)
 set(IMM_O_D_SRCS 
     ${IMM_O_D}/RawText.cpp
     ${IMM_O_D}/Header.cpp
     ${LOGO_O_D_SRCS})
-set(LOGO_O_D ${IMM_O_D}/Logos)
-set(LOGO_O_D_SRCS ${LOGO_O_D}/Logos.cpp)
 set(M_O_D ${OBJECTS_DIR}/Mutable)
 set(M_O_D_SRCS 
     ${M_O_D}/BLEIcon.cpp
     ${M_O_D}/Text.cpp
-    ${M_O_D}/Battery.cpp)
+    ${M_O_D}/Battery.cpp
+    ${M_O_D}/NotificationContainer.cpp)
 set(OBJECTS_DIRS 
     ${OBJECT_DIR}
     ${IMM_O_D}
