--- a/docs/_data/team.yml
+++ b/docs/_data/team.yml
@@ -3,7 +3,7 @@
   pic: false
   socials:
 - name: Tim Vaughan-Whitehead
-  role: Responsible for 3D design
+  role: 3D and graphic design
   pic: true
   socials:
 - name: Victor Garvalov
