--- a/docs/_data/team.yml
+++ b/docs/_data/team.yml
@@ -1,9 +1,9 @@
 - name: Paolo Celati
-  role: Responsible for hardware
+  role: Hardware design
   pic: false
   socials:
 - name: Tim Vaughan-Whitehead
-  role: 3D and graphic design
+  role: 3D & graphic design
   pic: true
   socials:
 - name: Victor Garvalov
