--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -174,6 +174,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-seo-tag
 
 # mimic GitHub Pages with --safe
 whitelist:
